# arc-todo-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  coolify.md  pyproject.toml
app/: arc_todo_client.py  chatbot_settings.py  concurrency.py  config.py  conversations.py  errors.py  history.py  http_pool.py  logging_context.py  main.py  models.py  rag_client.py  streaming.py  task_id_resolver.py
app/graph/: agents.py  heuristics.py  llm.py  mutations.py  nodes.py  prompts.py  rag_context.py  routing.py  scope.py  state.py  task_refs.py  workflow.py
app/tools/: knowledge_tools.py  todo_tools.py
scripts/: fix_split_imports.py  split_nodes.py
tests/: test_arc_todo_client.py  test_chat.py  test_config.py  test_graph.py  test_health.py  test_history.py  test_persistence_and_rag.py  test_rag_context.py  test_settings.py  test_task_id_resolver.py  test_workflow_persistence.py
